--- a/css/main.css
+++ b/css/main.css
@@ -202,21 +202,74 @@ ul > li {
 }
 
 .fade-slider__item {
-  background: url("/img/content/hero/slider_pic_1.png") center center/contain no-repeat;
+  background: center center / contain no-repeat;
   height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  -webkit-transition: opacity .3s;
+  transition: opacity .3s;
+}
+
+.fade-slider__item--visible {
+  opacity: 1;
+}
+
+.fade-slider__item--style-tshirts {
+  background-image: url("./img/content/hero/slider_pic_1.png");
+}
+
+.fade-slider__item--style-tshirts .fade-slider__text {
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translateX(-164%) translateY(-52%);
+          transform: translateX(-164%) translateY(-52%);
+}
+
+.fade-slider__item--style-games {
+  background-image: url("./img/content/hero/slider_pic_2.png");
+}
+
+.fade-slider__item--style-games .fade-slider__text {
+  left: 50%;
+  bottom: 0;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.fade-slider__item--style-games .lined-text {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.fade-slider__item--style-presents {
+  background-image: url("./img/content/hero/slider_pic_3.png");
+}
+
+.fade-slider__item--style-presents .fade-slider__text {
+  left: 0;
+  bottom: 0;
+  -webkit-transform: translateY(-120%);
+          transform: translateY(-120%);
+}
+
+.fade-slider__item--style-presents .lined-text {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .fade-slider__text {
   position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-164%, -52%);
-          transform: translate(-164%, -52%);
 }
 
 .lined-text {
   font-family: "alegreya", Arial, sans-serif;
-  color: #ffffff;
+  color: #fff;
   font-size: 63px;
   text-transform: uppercase;
   line-height: 1;
@@ -230,17 +283,14 @@ ul > li {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-164%, -52%);
-          transform: translate(-164%, -52%);
+  margin: 0;
 }
 
 .lined-text__word {
   background: #000;
   padding: 0 17px 8px;
   margin-top: -7px;
+  white-space: nowrap;
 }
 
 .lined-text__word:nth-child(2n) {
