--- a/main.sass
+++ b/main.sass
@@ -144,32 +144,82 @@ ul
 .fade-slider
   width: 100%
   height: 100%
+
+
   &__item
-    background: url("/img/content/hero/slider_pic_1.png") center center/contain no-repeat
+    background: center center / contain no-repeat
     height: 100%
-  &__text
     position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    opacity: 0
+    transition: opacity .3s
+
+
+  &__item--visible
+    opacity: 1
+
+
+  &__item--style-tshirts
+    background-image: url("./img/content/hero/slider_pic_1.png")
+
+
+  &__item--style-tshirts .fade-slider__text
     left: 50%
     top: 50%
-    transform: translate(-164%, -52%)
+    transform: translateX(-164%) translateY(-52%)
+
+
+  &__item--style-games
+    background-image: url("./img/content/hero/slider_pic_2.png")
+
+
+  &__item--style-games .fade-slider__text
+    left: 50%
+    bottom: 0
+    transform: translateX(-50%)
+
+
+  &__item--style-games .lined-text
+    align-items: center
+
+
+  &__item--style-presents
+    background-image: url("./img/content/hero/slider_pic_3.png")
+
+
+  &__item--style-presents .fade-slider__text
+    left: 0
+    bottom: 0
+    transform: translateY(-120%)
+
+
+  &__item--style-presents .lined-text
+    align-items: center
+
+
+  &__text
+    position: absolute
 
 .lined-text
   font-family: "alegreya", Arial, sans-serif
-  color: #ffffff
+  color: #fff
   font-size: 63px
   text-transform: uppercase
   line-height: 1
   display: flex
   flex-direction: column
   align-items: flex-start
-  position: absolute
-  left: 50%
-  top: 50%
-  transform: translate(-164%, -52%)
+  margin: 0
+
+
   &__word
     background: #000
     padding: 0 17px 8px
     margin-top: -7px
+    white-space: nowrap
     &:nth-child(2n)
       margin-left: 8px
     &--color-yellow
