--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@
   font-style: normal;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -39,9 +40,40 @@ ul > li {
 .hero {
   height: 100vh;
   min-height: 650px;
-  background: url("/img/bg/hero.jpg") center center/cover no-repeat;
+  background: url("../img/bg/hero.jpg") center center/cover no-repeat;
   position: relative;
   margin-bottom: 130px;
+}
+
+.header {
+  width: 1290px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 27px;
+}
+
+.mail {
+  text-decoration: none;
+  text-align: center;
+  color: inherit;
+}
+
+.mail__title {
+  margin-bottom: 3px;
+}
+
+.mail__content {
+  background: #212121;
+  color: yellow;
+  padding: 5px 10px;
 }
 
 .hero__content {
@@ -103,7 +135,7 @@ ul > li {
 .sidebar__hamburger-icon {
   width: 29px;
   height: 29px;
-  fill: #ffbc2f;
+  fill: #ffc92f;
 }
 
 .sidebar__hamburger {
@@ -145,7 +177,7 @@ ul > li {
 .sidebar__close-icon {
   width: 29px;
   height: 29px;
-  fill: #ffbc2f;
+  fill: #ffc92f;
 }
 
 .side-menu__item {
@@ -154,46 +186,14 @@ ul > li {
 
 .side-menu__link {
   font-size: 20px;
-  color: #ffbc2f;
+  color: #ffc92f;
   text-decoration: none;
   text-transform: uppercase;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Yanone Kaffeesatz', Arial, sans-serif;
 }
 
 .side-menu__link:hover {
   color: #d82727;
-}
-
-.header {
-  width: 1290px;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-top: 27px;
-}
-
-.mail {
-  text-decoration: none;
-  text-align: center;
-  color: inherit;
-}
-
-.mail__title {
-  margin-bottom: 3px;
-}
-
-.mail__content {
-  background: #212121;
-  color: #ffbc2f;
-  font-size: 16px;
-  padding: 5px 10px;
 }
 
 .fade-slider {
@@ -219,7 +219,7 @@ ul > li {
 }
 
 .fade-slider__item--style-tshirts {
-  background-image: url("./img/content/hero/slider_pic_1.png");
+  background-image: url("../img/content/hero/slider_pic_1.png");
 }
 
 .fade-slider__item--style-tshirts .fade-slider__text {
@@ -230,7 +230,7 @@ ul > li {
 }
 
 .fade-slider__item--style-games {
-  background-image: url("./img/content/hero/slider_pic_2.png");
+  background-image: url("../img/content/hero/slider_pic_2.png");
 }
 
 .fade-slider__item--style-games .fade-slider__text {
@@ -247,7 +247,7 @@ ul > li {
 }
 
 .fade-slider__item--style-presents {
-  background-image: url("./img/content/hero/slider_pic_3.png");
+  background-image: url("../img/content/hero/slider_pic_3.png");
 }
 
 .fade-slider__item--style-presents .fade-slider__text {
@@ -293,42 +293,41 @@ ul > li {
   white-space: nowrap;
 }
 
+.lined-text__word--color-yellow {
+  color: #ffc92f;
+}
+
 .lined-text__word:nth-child(2n) {
   margin-left: 8px;
 }
 
-.lined-text__word--color-yellow {
-  color: #ffb92f;
+.lined-text--no-indent .lined-text__word {
+  margin-left: 0;
 }
 
 .filter {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 100px;
 }
 
 .filter__item {
-  margin-right: 48px;
+  margin-right: 40px;
 }
 
 .filter__item:last-child {
   margin-right: 0;
 }
 
-.filter__item--active .filter__link {
-  color: #ffb92f;
-  background-color: #1b1b1b;
-}
-
 .filter__link {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Yanone Kaffeesatz', Arial, sans-serif;
   text-transform: uppercase;
   padding: 3px 21px;
   color: #1b1b1b;
@@ -342,6 +341,11 @@ ul > li {
   color: #d82727;
 }
 
+.filter__item--active .filter__link {
+  color: #ffc92f;
+  background: #1b1b1b;
+}
+
 .products {
   margin-bottom: 160px;
 }
@@ -352,44 +356,22 @@ ul > li {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin: -27px;
+  margin-left: -28px;
 }
 
 .products__item {
-  width: 302px;
+  width: 303px;
   height: 386px;
-  background: #ffb92f;
+  background: #ffc92f;
   margin-bottom: 35px;
-  margin-left: 27px;
+  margin-left: 28px;
   position: relative;
-}
-
-.products__item:hover .products__desc {
-  -webkit-transform: translateY(0%);
-          transform: translateY(0%);
-}
-
-.products__item--color-black {
-  background: #232323;
-}
-
-.products__item--color-black .products__price {
-  border-bottom-color: #ffb92f;
-}
-
-.products__item--color-black .products__price--color-black .products__price-amount {
-  color: #212121;
-}
-
-.products__item--size-double {
-  width: 630px;
-  height: 544px;
 }
 
 .products__price {
   position: absolute;
-  left: -6px;
   top: 18px;
+  left: -6px;
   width: 126px;
   border-bottom: 45px solid #232323;
   border-left: 5px solid transparent;
@@ -401,13 +383,30 @@ ul > li {
 .products__price-amount {
   font-size: 30px;
   font-weight: bold;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
-  color: #ffffff;
+  font-family: 'Yanone Kaffeesatz', Arial, sans-serif;
+  color: #fff;
   -webkit-transform: rotate(181deg);
           transform: rotate(181deg);
   position: absolute;
-  right: 28px;
   top: 2px;
+  right: 28px;
+}
+
+.products__item--color-black {
+  background: #232323;
+}
+
+.products__item--color-black .products__price {
+  border-bottom-color: #ffc92f;
+}
+
+.products__item--color-black .products__price-amount {
+  color: #212121;
+}
+
+.products__item--size-double {
+  width: 634px;
+  height: 544px;
 }
 
 .products__content {
@@ -425,6 +424,11 @@ ul > li {
   overflow: hidden;
 }
 
+.products__item:hover .products__desc {
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
+}
+
 .products__desc {
   position: absolute;
   bottom: 0;
@@ -433,6 +437,7 @@ ul > li {
   padding: 23px 30px;
   background: rgba(35, 35, 35, 0.8);
   font-size: 15px;
+  color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -440,16 +445,21 @@ ul > li {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  color: #fff;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: -webkit-transform 0.5s;
-  transition: transform 0.5s;
-  transition: transform 0.5s, -webkit-transform 0.5s;
+  -webkit-transition: -webkit-transform .3s;
+  transition: -webkit-transform .3s;
+  transition: transform .3s;
+  transition: transform .3s, -webkit-transform .3s;
+}
+
+.products__img {
+  display: block;
+  max-width: 90%;
+  max-height: 100%;
 }
 
 .products__desc-text {
@@ -457,19 +467,13 @@ ul > li {
   margin-bottom: 18px;
 }
 
-.products__img {
-  display: block;
-  min-width: 90%;
-  min-height: 90%;
-}
-
 .btn {
   text-transform: uppercase;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Yanone Kaffeesatz', Arial, sans-serif;
   font-size: 24px;
   padding: 2px 30px;
-  background: #212121;
-  color: #ffb92f;
+  background: #1b1b1b;
+  color: #ffc92f;
   display: inline-block;
   text-decoration: none;
 }
@@ -479,17 +483,17 @@ ul > li {
   color: #fff;
 }
 
-.collection {
+.collections {
   margin-bottom: 135px;
 }
 
-.collection__list {
+.collections__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.collection__item {
+.collections__item {
   min-height: 474px;
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -500,11 +504,7 @@ ul > li {
   position: relative;
 }
 
-.collection__item:last-child {
-  margin-right: 0;
-}
-
-.collection__item:before {
+.collections__item:before {
   content: "";
   display: block;
   position: absolute;
@@ -512,21 +512,21 @@ ul > li {
   width: 60%;
   top: -17%;
   left: -18%;
-  background: center center  / contain no-repeat;
+  background: center center / contain no-repeat;
 }
 
-.collection__item--type-guys:before {
-  background-image: url("../img/collections/collection_man.png");
+.collections__item--type-guys:before {
+  background-image: url("/img/collections/collection_man.png");
 }
 
-.collection__item--type-girls:before {
-  background-image: url("../img/collections/collection_woman.png");
+.collections__item--type-girls:before {
+  background-image: url("/img/collections/collection_woman.png");
   top: -31%;
   width: 80%;
   left: -25%;
 }
 
-.collection__link {
+.collections__link {
   display: block;
   padding: 74px 13% 74px 44%;
   text-decoration: none;
@@ -538,23 +538,26 @@ ul > li {
           box-sizing: border-box;
 }
 
-.collection__link:hover .btn {
+.collections__link:hover .btn {
   background: #d82727;
-  -webkit-columns: #fff;
-          columns: #fff;
+  color: #fff;
 }
 
-.collection__title {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
-  font-weight: bold;
+.collections__title {
+  font-family: 'Yanone Kaffeesatz', Arial, sans-serif;
   font-size: 70px;
+  font-weight: bold;
   line-height: 1;
   text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 11px;
 }
 
-.collection__desc {
+.collections__item:last-child {
+  margin-right: 0;
+}
+
+.collections__desc {
   margin-bottom: 28px;
 }
 
@@ -584,13 +587,14 @@ ul > li {
 }
 
 .site-menu__col:last-child {
-  margin-right: 0;
+  margin-right: 0px;
 }
 
 .site-menu__title {
+  font-family: 'Yanone Kaffeesatz', Arial, sans-serif;
   font-size: 24px;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
-  color: #212121;
+  font-weight: bold;
+  color: #1b1b1b;
   text-transform: uppercase;
   margin-bottom: 24px;
 }
@@ -601,8 +605,8 @@ ul > li {
 
 .site-menu__link {
   color: #737373;
-  text-decoration: none;
   font-size: 15px;
+  text-decoration: none;
 }
 
 .site-menu__link:hover {
@@ -611,7 +615,7 @@ ul > li {
 
 .site-menu__text {
   font-size: 15px;
-  color: #212121;
+  color: #1b1b1b;
   margin-bottom: 30px;
 }
 
@@ -620,10 +624,6 @@ ul > li {
   text-decoration: none;
   display: block;
   margin-bottom: 5px;
-}
-
-.site-menu__container {
-  width: 1105px;
 }
 
 .extras {
@@ -641,13 +641,26 @@ ul > li {
 }
 
 .extras__col:last-child {
-  margin-right: 0;
+  margin-right: 0px;
+}
+
+.extras__best {
+  text-align: center;
+  color: #fff;
+  background: #232323;
+  font-size: 50px;
+  font-weight: bold;
+  font-family: 'Yanone Kaffeesatz', Arial, sans-serif;
+  text-transform: uppercase;
+  padding: 39px 10%;
+  display: block;
+  text-decoration: none;
+  line-height: 1;
 }
 
 .extras__col-socials {
   height: 100%;
-  background: #000;
-  background: url("../img/bg/pattern.png") center center/500px;
+  background: url("./img/bg/pattern.png") center center/500px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -657,20 +670,6 @@ ul > li {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-.extras__best {
-  text-align: center;
-  color: #fff;
-  background: #232323;
-  font-size: 50px;
-  font-weight: bold;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
-  text-transform: uppercase;
-  display: block;
-  padding: 39px 10%;
-  text-decoration: none;
-  line-height: 1;
 }
 
 .socials {
@@ -700,5 +699,4 @@ ul > li {
 .socials__icon {
   width: 100%;
   height: 100%;
-  display: block;
 }
