--- a/css/products.css
+++ b/css/products.css
@@ -40,20 +40,28 @@ ul > li {
 .hero {
   height: 100vh;
   min-height: 650px;
-  background: url("../img/bg/hero.jpg") center center/cover no-repeat;
   position: relative;
   margin-bottom: 130px;
 }
 
+.t-shorts {
+  margin: 0 auto;
+  width: 1100px;
+  height: 670px;
+  background-color: #ffc92f;
+  margin-bottom: 100px;
+  margin-top: 100px;
+}
+
 .header {
-  width: 1290px;
+  width: 100%;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  background: url("../img/bg/hero.jpg") center center/cover no-repeat;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -78,12 +86,12 @@ ul > li {
 
 .hero__content {
   position: absolute;
-  top: 50%;
+  top: 10%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 1140px;
-  height: 72%;
+  width: 270px;
+  height: 50%;
 }
 
 .sidebar {
@@ -197,13 +205,12 @@ ul > li {
 }
 
 .fade-slider {
-  width: 100%;
-  height: 100%;
+  width: 356px;
+  height: 252px;
 }
 
 .fade-slider__item {
   background: center center / contain no-repeat;
-  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
@@ -270,7 +277,7 @@ ul > li {
 .lined-text {
   font-family: "alegreya", Arial, sans-serif;
   color: #fff;
-  font-size: 63px;
+  font-size: 24px;
   text-transform: uppercase;
   line-height: 1;
   display: -webkit-box;
