--- a/products.sass
+++ b/products.sass
@@ -33,18 +33,26 @@ ul>li
 .hero
   height: 100vh
   min-height: 650px
-  background: url('../img/bg/hero.jpg') center center / cover no-repeat
   position: relative
   margin-bottom: 130px
 
+.t-shorts
+  margin: 0 auto
+
+  width: 1100px
+  height: 670px
+  background-color: #ffc92f
+  margin-bottom: 100px
+  margin-top: 100px
+
 .header
-  width: 1290px
+  width: 100%
   margin: 0 auto
   display: flex
-  justify-content: space-between
+  background: url('../img/bg/hero.jpg') center center / cover no-repeat
+  justify-content: space-around
   align-items: center
   padding-top: 27px
-  MB
 
 .mail
   text-decoration: none
@@ -61,11 +69,11 @@ ul>li
 
 .hero__content
   position: absolute
-  top: 50%
+  top: 10%
   left: 50%
   transform: translate(-50%, -50%)
-  width: 1140px
-  height: 72%
+  width: 270px
+  height: 50%
 
 .sidebar
   width: 75px
@@ -146,12 +154,12 @@ ul>li
     color: #d82727
 
 .fade-slider
-  width: 100%
-  height: 100%
+  width: 356px
+  height: 252px
 
   &__item
     background: center center / contain no-repeat
-    height: 100%
+
     position: absolute
     top: 0
     left: 0
@@ -199,7 +207,7 @@ ul>li
 .lined-text
   font-family: "alegreya", Arial, sans-serif
   color: #fff
-  font-size: 63px
+  font-size: 24px
   text-transform: uppercase
   line-height: 1
   display: flex
