--- a/css/products.css
+++ b/css/products.css
@@ -53,6 +53,11 @@ ul > li {
   margin-top: 100px;
 }
 
+.decor {
+  overflow: hidden;
+  display: block;
+}
+
 .header {
   width: 100%;
   margin: 0 auto;
@@ -205,28 +210,23 @@ ul > li {
 }
 
 .fade-slider {
-  width: 356px;
-  height: 252px;
+  width: 516px;
+  height: 265px;
 }
 
 .fade-slider__item {
   background: center center / contain no-repeat;
   position: absolute;
-  top: 0;
+  top: 5px;
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0;
   -webkit-transition: opacity .3s;
   transition: opacity .3s;
 }
 
-.fade-slider__item--visible {
-  opacity: 1;
-}
-
 .fade-slider__item--style-tshirts {
-  background-image: url("../img/content/hero/slider_pic_1.png");
+  background-image: url("../img/decor/header-guys.png");
 }
 
 .fade-slider__item--style-tshirts .fade-slider__text {
@@ -234,40 +234,6 @@ ul > li {
   top: 50%;
   -webkit-transform: translateX(-164%) translateY(-52%);
           transform: translateX(-164%) translateY(-52%);
-}
-
-.fade-slider__item--style-games {
-  background-image: url("../img/content/hero/slider_pic_2.png");
-}
-
-.fade-slider__item--style-games .fade-slider__text {
-  left: 50%;
-  bottom: 0;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-}
-
-.fade-slider__item--style-games .lined-text {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.fade-slider__item--style-presents {
-  background-image: url("../img/content/hero/slider_pic_3.png");
-}
-
-.fade-slider__item--style-presents .fade-slider__text {
-  left: 0;
-  bottom: 0;
-  -webkit-transform: translateY(-120%);
-          transform: translateY(-120%);
-}
-
-.fade-slider__item--style-presents .lined-text {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .fade-slider__text {
@@ -707,3 +673,4 @@ ul > li {
   width: 100%;
   height: 100%;
 }
+/*# sourceMappingURL=products.css.map */
