--- a/products.sass
+++ b/products.sass
@@ -38,12 +38,14 @@ ul>li
 
 .t-shorts
   margin: 0 auto
-
   width: 1100px
   height: 670px
   background-color: #ffc92f
   margin-bottom: 100px
   margin-top: 100px
+.decor
+  overflow: hidden
+  display: block
 
 .header
   width: 100%
@@ -154,52 +156,28 @@ ul>li
     color: #d82727
 
 .fade-slider
-  width: 356px
-  height: 252px
+  width: 516px
+  height: 265px
 
   &__item
     background: center center / contain no-repeat
-
     position: absolute
-    top: 0
+    top: 5px
     left: 0
     width: 100%
     height: 100%
-    opacity: 0
+
     transition: opacity .3s
 
   &__item--visible
-    opacity: 1
 
   &__item--style-tshirts
-    background-image: url("../img/content/hero/slider_pic_1.png")
+    background-image: url("../img/decor/header-guys.png")
 
   &__item--style-tshirts .fade-slider__text
     left: 50%
     top: 50%
     transform: translateX(-164%) translateY(-52%)
-
-  &__item--style-games
-    background-image: url("../img/content/hero/slider_pic_2.png")
-
-  &__item--style-games .fade-slider__text
-    left: 50%
-    bottom: 0
-    transform: translateX(-50%)
-
-  &__item--style-games .lined-text
-    align-items: center
-
-  &__item--style-presents
-    background-image: url("../img/content/hero/slider_pic_3.png")
-
-  &__item--style-presents .fade-slider__text
-    left: 0
-    bottom: 0
-    transform: translateY(-120%)
-
-  &__item--style-presents .lined-text
-    align-items: center
 
   &__text
     position: absolute
